tests/bad/Constructor.ml
(* Unparametrized constructors are not functions. *)
let z = [] ()
